[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "patalib"
version = "2.1.0"
description = "Pataphysics library"
readme = "README.md"
license = "MIT"
authors = ["rpigu-i <rpigu-i@users.noreply.github.com>"]
maintainers = ["rpigu-i"]
packages = [{include = "patalib", from = "src"}]
include = ["LICENSE", "MANIFEST.in"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
homepage = "https://github.com/rpigu-i/patalib"
repository = "https://github.com/rpigu-i/patalib"
documentation = "https://rpigu-i.github.io/patalib/"
bugtracker = "https://github.com/rpigu-i/patalib/issues"

[tool.poetry.dependencies]
python = ">=3.8"
nltk = ">=3.9.1"
hypothesis = ">=5.16.0"

[tool.poetry.group.dev.dependencies]
# Add development dependencies here if needed
